--- a/OneDrive/Desktop/monitoring/src/css/main.css
+++ b/OneDrive/Desktop/monitoring/src/css/main.css
@@ -172,7 +172,7 @@
               width: 24px;
               height: 24px;
               border-radius: 50%;
-              background-color: #cfd8dc;
+              background-color: #ffffff;
               display: flex;
               justify-content: center;
               align-items: center;
